Changing no score from 0.00 to null.